# CppMySQL

./: README.md
ConsoleSQL/: CMakeLists.txt  main.cpp
GuiSQL/: CMakeLists.txt  main.cpp
GuiSQL/headers/: myWidget.h  sqlConnector.h
GuiSQL/sources/: myWidget.cpp  sqlConnector.cpp
